--- a/src/components/Task/ui/Task.module.scss
+++ b/src/components/Task/ui/Task.module.scss
@@ -23,6 +23,22 @@
   color: c.$black;
 }
 
+.Status {
+  font-size: 25px;
+}
+
+.Black {
+  color: c.$black;
+}
+
+.Blue {
+  color: c.$blue;
+}
+
+.Green {
+  color: c.$green;
+}
+
 .Controls {
   display: flex;
   gap: 20px;
