--- a/src/components/TasksList/ui/TasksList.module.css
+++ b/src/components/TasksList/ui/TasksList.module.css
@@ -4,4 +4,22 @@
   flex-direction: column;
   padding: 25px 75px;
   gap: 20px;
+}
+
+.Empty {
+  align-self: center;
+  width: 75vw;
+  background: #f5f5f7;
+  border: 5px solid #41444b;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 125px 0;
+}
+
+.Title {
+  font-size: 25px;
+  color: #41444b;
+  font-weight: bold;
 }/*# sourceMappingURL=TasksList.module.css.map */
