--- a/src/components/Task/ui/Task.module.css
+++ b/src/components/Task/ui/Task.module.css
@@ -48,4 +48,19 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+.Edit {
+  display: flex;
+  gap: 10px;
+}
+
+.Input {
+  font-size: 20px;
+  color: #41444b;
+  border: 3px solid #41444b;
+  padding: 5px 15px;
+  border-radius: 10px;
+  width: 650px;
+  background: #f5f5f7;
 }/*# sourceMappingURL=Task.module.css.map */
